@@ -1,0 +1,39 @@
+#
+# Check when logging in the previous session is loaded
+#
+
+[test-greeter-config]
+username=carol
+
+#?RUNNER DAEMON-START
+
+# X server starts
+#?XSERVER :50 START
+#?XSERVER :50 INDICATE-READY
+
+# LightDM connects to X server
+#?XSERVER :50 ACCEPT-CONNECT
+
+# Greeter starts
+#?GREETER START
+#?XSERVER :50 ACCEPT-CONNECT
+#?GREETER CONNECT-XSERVER :50
+#?GREETER CONNECT-TO-DAEMON
+#?GREETER CONNECTED-TO-DAEMON
+
+# Login as carol
+#?GREETER AUTHENTICATE USERNAME=carol
+#?GREETER AUTHENTICATION-COMPLETE USERNAME=carol AUTHENTICATED=TRUE
+#?GREETER TERMINATE SIGNAL=15
+
+# Session starts
+#?SESSION START NAME=alternative USER=carol
+#?XSERVER :50 ACCEPT-CONNECT
+#?SESSION CONNECT-XSERVER
+
+# Cleanup
+#?*STOP-DAEMON
+# Don't know what order they will terminate
+#?(SESSION TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15)
+#?(SESSION TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15)
+#?RUNNER DAEMON-EXIT STATUS=0
