@@ -2,7 +2,8 @@ Overview of changes in lightdm 1.0.4
 
     * Fix --enable-gtk-greeter=yes not working
     * Fix X sessions with arguments in Exec not working
-    * Use previous session for automatic login users
+    * Use previous session for automatic login or if greeter does not request
+      one.
     * Correct ownership of ~/.Xauthority if upgrading from buggy version of
       LightDM that had it root owned.
 
